--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="shared.css" />
     <title>WebX</title>
@@ -14,25 +17,26 @@
   <body>
     <div>
       <div class="navbarContainer d-flex j-cont-space-btw al-items-center">
-        <div class=" navbar__leftMenu d-flex al-items-center j-cont-space-ard">
+        <div class="navbar__leftMenu d-flex al-items-center j-cont-space-ard">
+          <div>
+            <span class="navbar__profile">AS</span>
+          </div>
+          <span class="material-symbols-outlined"> add </span>
+          <div class="w-60">
+            <input
+              class="search"
+              placeholder="Search meet, and call"
+              type="text"
+            />
+          </div>
+        </div>
         <div>
-          <span class="navbar__profile">AS</span>
+          <span class="material-symbols-outlined"> wifi </span>
         </div>
-        <span class="material-symbols-outlined"> add </span>
-        <div class="w-60">
-          <input class="search" placeholder="Search meet, and call"  type="text" />
-        </div>
-        <button class="transparentBtn" type="button">Cancel</button>
-    </div>
-    <div>
-        <span class="material-symbols-outlined">
-            wifi
-            </span>
-    </div>
       </div>
 
       <div class="d-flex mainContainer">
-        <div class="sidepannelContainer w-15 d-flex f-dir-col j-cont-space-btw">
+        <div class="w-18 d-flex f-dir-col j-cont-space-btw sidepannelContainer">
           <div class="sidepannel__topMenuContainer m-2">
             <div class="sidepannel__topMenuContainer__menuItem menuItem m-5">
               <div class="menu__itemContainer d-flex al-items-center p-5">
@@ -98,8 +102,172 @@
             </div>
           </div>
         </div>
-
-        <div class="mainSectionContainer w-85">activity</div>
+        
+        <div class="mainSectionContainer w-85">
+          <div class="bg--secondary w-100 p-b-5 h-50 mainSectionContainer__top">
+            <div class="d-flex w-100">
+              <div class="w-100 m-lf-5">
+                <h3 class="clr--primary ">Meetings</h3>
+                <div>
+                  <span
+                    class="material-symbols-outlined clr--secondary al-self-center"
+                  >
+                    location_home
+                  </span>
+                  <span class="clr--secondary txt-align-center al-self-center"
+                    >https://cb.webex.com/meet/user_name</span
+                  >
+                  <span
+                    class="material-symbols-outlined clr--secondary al-self-center"
+                  >
+                    copy_all
+                  </span>
+                </div>
+              </div>
+              <div class="w-10 h-20 d-flex al-items-center m-t-3 transparentBtn clr--secondary txt-align-center">
+                <a class="transparentBtn-border">
+                  Collapse
+                </a>
+                <span class="al-self-center material-symbols-outlined">
+                  expand_less
+                </span>
+              </div>
+            </div>
+            <div class="d-flex clr--primary j-cont-space-ard m-t-p-b-10 p-l-r meet__controls txt-align-center">
+              <div class="d-flex f-dir-col w-15 al-items-center">
+                <span class="material-symbols-outlined greenIcon w-5">
+                  videocam
+                </span>
+                <span>Start a personal room meeting</span>
+              </div>
+              <div class="d-flex f-dir-col w-15 al-items-center">
+                <span class="material-symbols-outlined greenIcon w-5">
+                  login
+                </span>
+                <span>Join a meeting</span>
+              </div>
+              <div class="d-flex f-dir-col w-15 al-items-center">
+                <span class="material-symbols-outlined transparentIcon w-5">
+                  calendar_add_on
+                </span>
+                <div class="d-flex">
+                  <span>Schedule a meeting</span
+                  ><span class=" meet__down-arrow material-symbols-outlined"> expand_more </span>
+                </div>
+              </div>
+            </div>
+            <div class="p-15 bg--thirtiary m-lf-5 border-rad d-flex j-cont-space-btw meetControlerContainer">
+              <div class="meetControler__leftList w-40p">
+                <span class="clr--primary p-5 border-rad bg--quad leftList__item m-2">Calendar</span>
+                <span class="clr--secondary p-5 border-rad leftList__item m-2">Meeting recap</span>
+              </div>
+              <div class="d-flex w-40p j-cont-space-ard">
+                <div class="txt-align-center d-flex">
+                <div class="clr--primary border-tc date__leftArrow p-5 m-0"><</div>
+                <div class="clr--primary border-tc p-5 m-0">Fri, 02-02-2024</div>
+                <div class="clr--primary border-tc date__rightArrow p-5">></div>
+              </div>
+              <span class="clr--primary p-5 border-tc border-rad">Today</span>
+              <span class="clr--primary p-5 border-tc border-rad">List</span>
+              </div>
+            </div>
+          </div>
+          <div class="p-15 meetList__Container bg--primary clr--primary">
+            <span class="m-b">29 January 2024</span>
+            <div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">G</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI - Angular Training Program ( C# Track )</span>
+                  <span class="clr--secondary">10:30 AM - 1:00 PM</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">L</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">Leadership Session with Surya - TAP 2024</span>
+                  <span class="clr--secondary">02:00 PM - 03:00 PM</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">S</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI : Hands-on + Doubts Clarification Session ( C# Track )</span>
+                  <span class="clr--secondary">03:00 PM - 04:30 PM</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">A</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">Front End - TAP'24</span>
+                  <span class="clr--secondary">05:00 PM - 06:00 PM</span>
+                </div>
+              </div>
+            <span class="m-b">30 January 2024</span>
+            <div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">G</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI - Angular Training Program ( C# Track )</span>
+                  <span class="clr--secondary">10:30 AM - 1:00 PM</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">L</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">Weekly Sync-TAP December Batch</span>
+                  <span class="clr--secondary">02:30 PM - 03:00 pm</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">S</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI : Hands-on + Doubts Clarification Session ( C# Track )</span>
+                  <span class="clr--secondary">03:00 PM - 04:30 PM</span>
+                </div>
+              </div>
+            <span class="m-b">31 January 2024</span>
+            <div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">G</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">Guvi training</span>
+                  <span class="clr--secondary">10:30 am - 1:00 pm</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">S</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI : Hands-on + Doubts Clarification Session ( C# Track )</span>
+                  <span class="clr--secondary">03:00 PM - 04:30 PM</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">A</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">Front End - TAP'24</span>
+                  <span class="clr--secondary">05:00 PM - 06:00 PM</span>
+                </div>
+              </div>
+            </div>
+            <span class="m-b">02 February 2024</span>
+            <div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">G</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI - Angular Training Program ( C# Track )</span>
+                  <span class="clr--secondary">10:30 AM - 1:00 PM</span>
+                </div>
+              </div>
+              <div class="d-flex p-5 border-rad-10 m-b-10 m-t-10 bg--thirtiary al-items-center menu__Item">
+                <span class="h-100p txt-align-center w-20px meetItem__profile">S</span>
+                <div class="d-flex f-dir-col">
+                  <span class="clr--secondary">CHUBB - GUVI : Hands-on + Doubts Clarification Session ( C# Track )</span>
+                  <span class="clr--secondary">03:00 PM - 04:30 PM</span>
+                </div>
+              </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
