--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="./assets/favicon.jpg">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="shared.css" />
     <title>WebX</title>
